--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Esta aplicação não permite introduzir números negativos, nem positivos maior
 
 Realizei uma pequena interface gráfica, para ser mais visivél a ordenação do array.
 
-Desenvolvido por : João Gomes
+Projeto desenvolvido por : João Gomes
